...
    <string name="news_empty">The event organizer hasn\'t published any news yet.</string>
    <string name="my_schedule_empty">There is currently no saved activities for this event</string>
    <string name="send_news_failed">Cannot publish news. Try again later!</string>

    <string name="main_fragment_join_event">Join</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_account_display">My account</string>
    <string name="title_activity_event_picking">EventPickingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_login_facebook">login with facebook</string>

    <string name="invalid_email_error">Invalid email address</string>
    <string name="error_field_required">Required field</string>
    <string name="error_field_invalid">Invalid value</string>
    <string name="empty_password_error">The password cannot be empty</string>
    <string name="password_match_error">The passwords do not match</string>
    <string name="generic_auth_error">Could not authenticate. Unknown error.</string>
    <string name="help_text_activity_event_picking">Please select an event to continue</string>
    <string name="help_text_go_join_events">Please go explore and join an event to continue !</string>
    <string name="joined_help_text_activity_event_picking">Events you joined:</string>
    <string name="not_joined_help_text_activity_event_picking">Click here to go explore events !</string>
...
    <string name="create_form_hint_begin_date">Beginning date</string>
    <string name="create_form_hint_end_date">Ending date</string>
    <string name="create_form_upload_image">Upload image</string>
    <string name="image_successfully_uploaded">Event image successfully uploaded !</string>
    <string name="event_form_button_visibility">Allow public access to this event</string>
    <string name="create_form_delete_event_button">Delete this event !</string>
    <string name="button_yes">YES !</string>
    <string name="button_no">NO !</string>

    <string name="create_event_title">Create Event</string>
    <string name="edit_nav_item_activity_event">Event edition</string>
    <string name="create_event_canceled">Operation was unexpectedly cancelled.</string>
    <string name="create_event_error">An error occurred:</string>
    <string name="create_event_success">The event has been created!</string>
    <string name="create_event_name_empty">The event name cannot be empty!</string>
    <string name="create_event_name_too_short">The event name must be at least 4 characters long!</string>
    <string name="create_event_update_success">The event has been updated!</string>
    <string name="create_event_delete_dialog_title">Delete event</string>
    <string name="create_event_delete_dialog_content">Deleting this event is irreversible ! Are you sure you still want to delete it?</string>
    <string name="feedback_form_main_go_button">Feedback</string>
    <string name="feedback_nav">Feedback</string>

...
