<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Toolbar"
        android:id="@+id/activity_login_toolbar"/>

    <ProgressBar
        android:id="@+id/activity_login_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.userManager.LoginActivity">

        <!-- Login progress -->

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/activity_login_email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" android:imeOptions="actionNext"
                    android:hint="@string/email_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/activity_login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" android:imeOptions="actionDone"
                android:hint="@string/password_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_login_login_button"
            style="@style/Button_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/login_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_login_signup_button"
            style="@style/Button_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/signup_button"/>
    </LinearLayout>

</LinearLayout>
